# cloud-fit

./: .gitignore  CMakeLists.txt  README.md  cbuild.sh  make.sh
3DLineDetection/: .gitignore  CMakeLists.txt  README.md  cbuild.sh
3DLineDetection/include/: CommonFunctions.h  LineDetection3D.h  Timer.h  nanoflann.hpp  utils.h
3DLineDetection/src/: CommonFunctions.cpp  LineDetection3D.cpp  main.cpp
cmake/: cylinder.cmake  install_files.cmake  line.cmake  plane.cmake
include/: cylinder.h  interface.h  line.h  plane.h
src/: cylinder.cpp  line.cpp  plane.cpp
test/: cylinder_node.cpp  line_node.cpp  plane_node.cpp  plane_test.cpp
